[package]
name = "night_wisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
pnet = "0.34.0" # Meta-crate
pnet_datalink = "0.34.0"
pnet_packet = "0.34.0"
pnet_transport = "0.34.0"
rand = "0.8"
